fix icons on mobile widths

--- a/styles/components/TakeAction.module.scss
+++ b/styles/components/TakeAction.module.scss
@@ -87,65 +87,3 @@
     margin-bottom: space(0.5);
   }
 }
-
-//  temporary
-
-.actionSection {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: space(16) 0;
-  background: linear-gradient(56.55deg, #5b7187 0%, #7e99b4 100%);
-  color: $color--white;
-
-  &__container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-  &__header {
-    margin-bottom: space(2);
-    text-align: center;
-  }
-
-  &__content {
-    display: block;
-    max-width: rem(640px);
-    margin-bottom: space(8);
-    text-align: center;
-    font-family: $font-family--primary;
-    font-weight: bold;
-  }
-
-  &__buttonContainer {
-    display: flex;
-  }
-
-  &__learnButton,
-  &__donateButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: $font-family--primary;
-    font-weight: bold;
-    height: 43px;
-    width: 141px;
-    border-radius: $border-radius--small;
-  }
-
-  &__learnButton {
-    border: 4px solid $color--white;
-    margin-right: space(1);
-    color: $color--white;
-    text-decoration: none;
-  }
-
-  &__donateButton {
-    margin-left: space(1);
-    border: 4px solid $color--white;
-    background-color: $color--white;
-    color: #5b7187;
-    text-decoration: none;
-  }
-}
